Blender 2.8 - EDIT Mode - Crashing after selecting one of multiple materials #65302

Closed
opened 2019-05-30 12:17:12 +02:00 by Petr Smrtka · 14 comments

System Information
Operating system: Windows 7 Ultimate x64
Graphics card: nVidia GeForce GTX1060 6GB

Blender Version
Broken: 2.80, fee600f479, master, 2019-05-30 18:17, as found on the splash screen)
Worked: (optional)

Short description of error
Blender crashing in EDIT mode when selecting one of the multiple materials assigned to object.

Exact steps for others to reproduce the error

  1. Select default cube, add multiple simple materials
  2. Go to EDIT mode
  3. Select some face(s) and click some of the listed material, it crash immediately
**System Information** Operating system: Windows 7 Ultimate x64 Graphics card: nVidia GeForce GTX1060 6GB **Blender Version** Broken: 2.80, fee600f47980, master, 2019-05-30 18:17, as found on the splash screen) Worked: (optional) **Short description of error** Blender crashing in EDIT mode when selecting one of the multiple materials assigned to object. **Exact steps for others to reproduce the error** 1. Select default cube, add multiple simple materials 2. Go to EDIT mode 2. Select some face(s) and click some of the listed material, it crash immediately
Author

Added subscriber: @PetrSmrtka

Added subscriber: @PetrSmrtka

Added subscriber: @hedgehog90-3

Added subscriber: @hedgehog90-3

I have this too.

Error   : EXCEPTION_ACCESS_VIOLATION

Possibly related? : #65285

I have this too. ``` Error : EXCEPTION_ACCESS_VIOLATION ``` Possibly related? : #65285

Added subscriber: @Ndinhos-2

Added subscriber: @Ndinhos-2

I'm getting this too: Mac OS X 10.14.5

I'm getting this too: Mac OS X 10.14.5

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm on Win 10, GTX1080. There's also other problem, when some times I can't deselect faces. Here's a test file: materials_bug.blend

I can confirm on Win 10, GTX1080. There's also other problem, when some times I can't deselect faces. Here's a test file: [materials_bug.blend](https://archive.blender.org/developer/F7081054/materials_bug.blend)

Debugging from source shows that the problem lies with mesh_batch_cache_valid(Mesh * me) in draw\intern\draw_cache_impl_mesh.c, Line 2079:

if (cache->is_editmode != (me->edit_mesh != NULL)) {
Debugging from source shows that the problem lies with mesh_batch_cache_valid(Mesh * me) in draw\intern\draw_cache_impl_mesh.c, Line 2079: ``` if (cache->is_editmode != (me->edit_mesh != NULL)) { ```

This issue was referenced by 9899999e94

This issue was referenced by 9899999e944c0d954dbe5a7aa96c8e1680e7b3f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @BlenderPet

Added subscriber: @BlenderPet

This still happens for me in 2.8 RC2.

Windows 10.0.17763
GeForce GTX 1080
NVidia Studio Driver 430.86

This still happens for me in 2.8 RC2. Windows 10.0.17763 GeForce GTX 1080 NVidia Studio Driver 430.86

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek

This comment was removed by @StephenHamacek

*This comment was removed by @StephenHamacek*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65302
No description provided.